Make segment selector bit wider + truncate segment name earlier, to fix the visual display bug (even in German language) Fixes #4459

--- a/plugins/Morpheus/stylesheets/theme.less
+++ b/plugins/Morpheus/stylesheets/theme.less
@@ -128,7 +128,7 @@ table.entityTable tr td a:hover {
             margin: 0;
             a {
                .font-default(18px, 22px);
-               padding: 14px 27px 11px;
+               padding: 14px 22px 11px;
             }
             > li {
                 .border-radius(0px);
