--- a/plugins/SegmentEditor/stylesheets/segmentation.less
+++ b/plugins/SegmentEditor/stylesheets/segmentation.less
@@ -461,7 +461,7 @@ div.scrollable {
 
 .segmentationContainer .submenu {
   font-size: 13px;
-  min-width: 180px;
+  min-width: 200px;
 }
 
 .segmentationContainer .submenu ul {
@@ -507,7 +507,7 @@ div.scrollable {
 }
 
 .segmentationContainer.visible {
-  width: 180px;
+  width: 200px;
 }
 
 .segmentationContainer.visible ul.submenu {
